--- a/src/components/Options/Options.module.css
+++ b/src/components/Options/Options.module.css
@@ -6,7 +6,7 @@
 
 .btn {
     font-size: 15px;
-    background-color: green;
+    background-color: rgb(119, 239, 44);
     color: white;
     padding: 5px;
     display: flex;
@@ -18,5 +18,5 @@
 }
 
 .btn:hover {
-    background-color: #f58020;
+    background-color: #ef7f23;
 }
